--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
   <script src="types/types.js"></script>
   <script src="class/index.js"></script>
+  <script src="namespaces/index.js"></script>
+  <script src="interfaces/index.js"></script>
+  <script src="generics/index.js"></script>
 </body>
 
 </html>
