--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src="namespaces/index.js"></script>
   <script src="interfaces/index.js"></script>
   <script src="generics/index.js"></script>
+  <script src="decorators/index.js"></script>
 </body>
 
 </html>
